--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">aws-android-sdk-appsync</string>
+    <string name="app_name">PostsApp</string>
 </resources>
